# Koma

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  e2e-run.mjs  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.cursor/: environment.json
.playwright-cli/: page-2026-07-03T16-04-55-391Z.yml  page-2026-07-03T16-05-06-929Z.yml  page-2026-07-03T16-05-59-203Z.yml  page-2026-07-03T16-17-47-553Z.yml  page-2026-07-03T16-18-41-163Z.yml  page-2026-07-03T16-18-44-011Z.yml  page-2026-07-03T16-18-46-675Z.yml  page-2026-07-03T16-18-49-291Z.yml  page-2026-07-03T16-19-51-928Z.yml  page-2026-07-03T16-20-19-172Z.yml  page-2026-07-03T16-20-21-846Z.yml  page-2026-07-03T16-21-03-141Z.yml  page-2026-07-03T16-22-14-406Z.yml  page-2026-07-03T16-22-44-273Z.yml  page-2026-07-03T16-24-04-340Z.yml  page-2026-07-04T16-02-38-519Z.yml  page-2026-07-04T16-03-17-069Z.yml  page-2026-07-04T16-04-03-420Z.yml  page-2026-07-04T16-04-10-044Z.yml  page-2026-07-04T16-04-35-296Z.yml
docs/: COMICK_DESKTOP_FIX.md  HANDOFF.md  IMPROVEMENT_PLAN.md  QOL_PLAN.md  STAGES.md
proxy/: README.md  dev.mjs  self-check.mjs  worker.mjs  wrangler.toml
public/: manifest.webmanifest
scripts/: run-tests.sh  ux-audit.mjs
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cloudflare.rs  fetch.rs  lib.rs
tests/: background-refresh.test.ts  chapter-cache.test.ts  chapter-groups.test.ts  comick-driver.test.ts  comick-latest.test.ts  confirmation.test.ts  continue-reading.test.ts  (+32 more)
(+122 files in other folders)
